[gd_scene load_steps=7 format=3 uid="uid://f5v6k8edjhx"]

[ext_resource type="Script" path="res://Objects/BasicAAEnemy/basic_aa_enemy.gd" id="1_844mn"]
[ext_resource type="Script" path="res://Objects/Tank/attack_logic.gd" id="2_l4jop"]
[ext_resource type="Script" path="res://Objects/BasicAAEnemy/shoot_logic.gd" id="2_pn2mb"]
[ext_resource type="Texture2D" uid="uid://b5kbcwil00pkx" path="res://Objects/BasicAAEnemy/basic_aa_enemy_gun.png" id="3_xej74"]
[ext_resource type="Texture2D" uid="uid://okxytnoh7ogy" path="res://Objects/BasicAAEnemy/basic_aa_enemy_base.png" id="4_lb3ma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ptbe"]
size = Vector2(20, 8)

[node name="BasicAAEnemy" type="Area2D"]
script = ExtResource("1_844mn")

[node name="AttackLogic" type="Node" parent="."]
script = ExtResource("2_l4jop")
is_tank_shooting = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3ptbe")

[node name="Gun" type="Node2D" parent="."]
script = ExtResource("2_pn2mb")

[node name="SpawnPoint" type="Marker2D" parent="Gun"]
position = Vector2(0, -10)

[node name="ShootTimer" type="Timer" parent="Gun"]
wait_time = 2.0

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("3_xej74")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_lb3ma")
